--- a/_sass/hydejack/__inline__/_sidebar.scss
+++ b/_sass/hydejack/__inline__/_sidebar.scss
@@ -67,7 +67,7 @@ hy-drawer {
   justify-content: center;
   align-items: center;
   color: rgba(255, 255, 255, .75);
-  text-align: center;
+  text-align: left;
   z-index: 2;
   min-height: 100vh;
   
@@ -127,18 +127,35 @@ hy-drawer {
   }
 }
 
+ul.menu ul.submenu{
+  list-style-type: none;
+  margin-bottom: 0rem;
+}
+
 .sidebar-nav > ul {
   list-style: none;
   padding-left: 0;
 }
 
 a.sidebar-nav-item {
+  width: 100%;
   display: inline-block;
   font-weight: var(--font-weight-heading);
   line-height: 1.75;
   padding: .25rem;
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
+
+a.sidebar-nav-subitem {
+  display: inline-block;
+  text-align: right;
+  font-size: 14px;
+  font-weight: var(--font-weight-heading);
+  line-height: 0.75;
+  padding: .25rem;
+  border-bottom: .5px solid rgba(255, 255, 255, 0.2);
+}
+
 
 
 
