modify blog layout
- modify tag list view
- implement share function

--- a/_includes/components/post.html
+++ b/_includes/components/post.html
@@ -47,3 +47,6 @@
     </footer>
   {% endif %}
 </article>
+{% unless include.link_title %}
+  {% include components/share-buttons.html %}
+{% endunless %}
