--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -4,6 +4,14 @@ layout: base
 
 {% assign posts = site.tags[page.slug] | where: "categories", page.category %}
 
+{% if page.title.size > 0 %}
+  <header>
+    <h1 class="page-title">{{ page.title }}</h1>
+    {% include components/message.html text=page.description hide=page.hide_description %}
+  </header>
+  <hr class="sr-only"/>
+{% endif %}
+
 {% for post in posts %}
   {% include components/post.html post=post link_title=true excerpt=true %}
 {% endfor %}
